fix: Remove unnecessary vertical scrollbar by adjusting CSS height settings

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
+html, body, #__next {
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   margin: 0;
